# evo_linux_app_dev

./: .gitignore  README.md
base/include/: baseResultCode.h
base/include/basicType/: RefCountObj.h  generalCallbacks.h
base/include/container/: List.h
base/include/jni/: jniModules.h  registerJniMethods.h
base/include/log/: AutoSerialFileLogger.h  ConsoleLogger.h  FileBasedLogger.h  LogSystem.h  StringBufferLogger.h  SysLogger.h  logLevel.h  logSystemBridge.h
base/include/osal/: OsalCondVar.h  OsalFileSystem.h  OsalMutex.h
base/include/support/format/: Base64.h
base/include/support/frozenFAT/: FrozenFatManager.h
base/include/support/json/: EJsonError.h  SimpleJsonArray.h  SimpleJsonObj.h
base/include/support/mp4/: Mp4Atoms.h  Mp4Context.h  Mp4Muxer.h  Mp4Util.h  TemplatedMp4Muxer.h
base/include/task/: PeriodicTask.h  Runnable.h  RunnableBridge.h  Thread.h  ThreadPool.h
base/include/util/: FileUtil.h  SimplePropertySet.h  SmartMutexLock.h  StrUtil.h  SystemUtil.h  TimeUtil.h  endianOPs.h
bsp/include/: sensors.h
bsp/include/hardware/: sensors.h
bsp/include/qmmf-sdk/: qmmf_buffer.h  qmmf_offline_jpeg_params.h  qmmf_recorder.h  qmmf_recorder_extra_param.h  qmmf_recorder_extra_param_tags.h  qmmf_recorder_params.h
bsp/include/snpe/DlSystem/: DlEnums.hpp
bsp/include/snpe/SNPE/: PSNPE.h  SNPEBuilder.h
bsp/include/utils/: Vector.h
bsp/lib/: libbinder.so.0  libcamera_metadata.so.0  libcutils.so.0  libdiag.so.1  libffi.so.6  libffi.so.7  libglib-2.0.so.0  libgthread-2.0.so.0  libion.so.0  libion.so.0.0.0  liblog.so.0  libm.so.6  libpcre.so.1  libprotobuf.so.28  libqmi_cci.so.1  libqmi_common_so.so.1  libqmi_csi.so.1  libqmi_encdec.so.1  libqmi_sap.so.1  libqrtr.so.1  libqsocket.so.1  libsensors.ssc.so.1  libsensorslog.so.1  libsnsdiaglog.so.1  libsnsproto.so.1  libssc.so.1  libstdc++.so.6.0.28  libtime_genoff.so.1  libudev.so.1.6.16  libutils.so.0  libwayland-client.so.0  libwayland-server.so.0  libz.so.1
examples/gstreamer/recording/: FfmpegMuxer.cpp  FfmpegMuxer.h  README.md  Recording.cpp  build  uploadAndRun.bat
examples/gstreamer/recording/project/: .gitignore  CMakeLists.txt
examples/mqtt/: MqttTest.cpp  README.md  pushAndRun.bat  uploadAndRun.bat
examples/mqtt/cert/: 039e1ece-ed28-4507-8c88-09dc7b6fa780.key  039e1ece-ed28-4507-8c88-09dc7b6fa780.pem
examples/mqtt/project/: .gitignore  CMakeLists.txt
examples/smartCable/: DataPacket.cpp  DataPacket.h  README.md  SerialPort.cpp  SerialPort.h  SmartCableReader.cpp  pushAndRun.bat
examples/smartCable/project/: .gitignore  CMakeLists.txt
examples/smartCable/wifiConfig/: config_wifi.bat  connect_wifi.sh
sdk/camera1.0/examples/SimpleRecorder/: .gitignore  FfmpegMuxer.cpp  FfmpegMuxer.h  README.md  SimpleRecorder.cpp  pushAndRun.bat
sdk/camera1.0/examples/SimpleRecorder/project/: CMakeLists.txt
sdk/camera1.0/include/: mitacCameraSdk.h
sdk/camera1.0/tests/FpsTest/: FpsTest.cpp  README.md
sdk/camera1.0/tests/FpsTest/project/: CMakeLists.txt
sdk/camera1.x/: README.md
sdk/camera1.x/examples/RecordingWithCarDetect/: .gitignore  FastCVHelper.cpp  FastCVHelper.h  FfmpegMuxer.cpp  IAIModel.h  Log.h  README.md  RecordingWithCarDetect.cpp  SNPELib.cpp  SNPELib.h  pushAndRun.bat
sdk/camera1.x/examples/RecordingWithCarDetect/project/: CMakeLists.txt
sdk/camera1.x/examples/streaming/Live555/: .gitignore  Live555Test.cpp  README.md  pushAndRun.bat
sdk/camera1.x/examples/streaming/Live555/project/: CMakeLists.txt
sdk/camera1.x/include/: mitacCameraSdk.h
sdk/camera1.x/tests/FpsTest/: pushAndRun.bat
sdk/camera1.x/tests/FpsTest/project/: .gitignore
